--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>World Clock Symphony</title>
 </head>
+
 <body>
     <h1>World Clock Symphony</h1>
 
     <footer>
-    <p>
-        This project was coded by ❤️ Olga and is open-sourced on <a class="link-website"
-            href="https://github.com/shecodesio/weather" target="_blank" rel="noopener noreferrer">
-            GitHub </a> and hosted on <a class="link-website" href=" https://www.weather.shecodes.io/" target="_blank"
-            rel="noopener noreferrer"> Netlify </a>.
-    </p>
+        <p>
+            This project was coded by ❤️ Olga and is open-sourced on <a class="link-website"
+                href="https://github.com/shecodesio/weather" target="_blank" rel="noopener noreferrer">
+                GitHub </a> and hosted on <a class="link-website" href=" https://www.weather.shecodes.io/"
+                target="_blank" rel="noopener noreferrer"> Netlify </a>.
+        </p>
     </footer>
 
     </footer>
-    
+
 </body>
+<script src="index.js"></script>
+
 </html>
