--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.6.0/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock Symphony</title>
 </head>
 
@@ -14,8 +16,8 @@
     <footer>
         <p>
             This project was coded by ❤️ Olga and is open-sourced on <a class="link-website"
-                href="https://github.com/shecodesio/weather" target="_blank" rel="noopener noreferrer">
-                GitHub </a> and hosted on <a class="link-website" href=" https://www.weather.shecodes.io/"
+                href="https://github.com/SheillaO/World-Clock-Symphony" target="_blank" rel="noopener noreferrer">
+                GitHub </a> and hosted on <a class="link-website" href=" https://worldclocksymphony.netlify.app/"
                 target="_blank" rel="noopener noreferrer"> Netlify </a>.
         </p>
     </footer>
