Added basic html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,67 @@
 </head>
 
 <body>
+    <div class="container"><
     <h1>World Clock Symphony</h1>
+
+    <select>
+        <option value="America/New_York">New York 🗽</option>
+        <option value="Europe/London">London 💂‍♂️ </option>
+        <option value="Europe/Paris">Paris 🥐 </option>
+        <option value="Asia/Tokyo">Tokyo 🍣</option>
+        <option value="Australia/Sydney">Sydney 🌏</option>
+        <option value="America/Los_Angeles">Los Angeles 🌴</option>
+        <option value="Asia/Kolkata">Kolkata 🕌</option>
+        <option value="America/Sao_Paulo">São Paulo 🇧🇷</option>
+        <option value="Africa/Nairobi">Nairobi 🦁</option>
+        <option value="Asia/Dubai">Dubai 🏝️ </option>
+        <option value="Africa/Johannesburg">Johannesburg 🌍</option>
+    </select>
+
+    <div class="city">
+    <h2>Los Angeles 🌴</h2>
+    <div class="date"> July 23rd 2025 </div>
+    <div class="time"> 1:48:15 AM</div>
+    </div>
+
+    <div class="city">
+        <h2>Berlin 🕍</h2>
+        <div class="date"> July 23rd 2025 </div>
+        <div class="time"> 4:48:15 AM</div>
+    </div>
+        
+    <div class="city">
+        <h2>Seoul 🎮</h2>
+        <div class="date"> July 23rd 2025 </div>
+        <div class="time"> 11:48:15 AM</div>
+    </div>
+
+    <div class="city">
+        <h2>Bangkok 🛶</h2>
+        <div class="date"> July 23rd 2025 </div>
+        <div class="time"> 12:48:15 PM</div>
+    </div>
+
+    <div class="city">
+        <h2>Dublin ☘️</h2>
+        <div class="date"> July 23rd 2025 </div>
+        <div class="time"> 1:48:15 AM</div>
+        </div>
+
+    <div class="city">
+        <h2>Cape Town 🌊</h2>
+        <div class="date"> July 23rd 2025 </div>
+        <div class="time"> 9:48:15 AM</div>
+    </div>
+
+
+
+
+
+
+    </div>
+
+
 
     <footer>
         <p>
@@ -20,6 +80,7 @@
                 GitHub </a> and hosted on <a class="link-website" href=" https://worldclocksymphony.netlify.app/"
                 target="_blank" rel="noopener noreferrer"> Netlify </a>.
         </p>
+    </div>
     </footer>
 
     </footer>
