--- a/index.html
+++ b/index.html
@@ -6,70 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.6.0/moment-timezone-with-data-1970-2030.min.js"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.6.0/moment-timezone-with-data-1970-2030.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=PT+Mono&family=Poppins&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <title>World Clock Symphony</title>
 </head>
 
 <body>
-    <div class="container"><
-    <h1>World Clock Symphony</h1>
+    <div class="container">
+        <h1>World Clock Symphony</h1>
 
-    <select>
-        <option value="America/New_York">New York 🗽</option>
-        <option value="Europe/London">London 💂‍♂️ </option>
-        <option value="Europe/Paris">Paris 🥐 </option>
-        <option value="Asia/Tokyo">Tokyo 🍣</option>
-        <option value="Australia/Sydney">Sydney 🌏</option>
-        <option value="America/Los_Angeles">Los Angeles 🌴</option>
-        <option value="Asia/Kolkata">Kolkata 🕌</option>
-        <option value="America/Sao_Paulo">São Paulo 🇧🇷</option>
-        <option value="Africa/Nairobi">Nairobi 🦁</option>
-        <option value="Asia/Dubai">Dubai 🏝️ </option>
-        <option value="Africa/Johannesburg">Johannesburg 🌍</option>
-    </select>
+        <select>
+            <option value="">Choose a City ....</option>
+            <option value="America/New_York">New York 🗽</option>
+            <option value="Europe/London">London 💂‍♂️ </option>
+            <option value="Asia/Tokyo">Tokyo 🍣</option>
+            <option value="Australia/Sydney">Sydney 🌏</option>
+            <option value="Africa/Johannesburg">Johannesburg 🌍</option>
+        </select>
 
-    <div class="city">
-    <h2>Los Angeles 🌴</h2>
-    <div class="date"> July 23rd 2025 </div>
-    <div class="time"> 1:48:15 AM</div>
-    </div>
-
-    <div class="city">
-        <h2>Berlin 🕍</h2>
-        <div class="date"> July 23rd 2025 </div>
-        <div class="time"> 4:48:15 AM</div>
-    </div>
-        
-    <div class="city">
-        <h2>Seoul 🎮</h2>
-        <div class="date"> July 23rd 2025 </div>
-        <div class="time"> 11:48:15 AM</div>
-    </div>
-
-    <div class="city">
-        <h2>Bangkok 🛶</h2>
-        <div class="date"> July 23rd 2025 </div>
-        <div class="time"> 12:48:15 PM</div>
-    </div>
-
-    <div class="city">
-        <h2>Dublin ☘️</h2>
-        <div class="date"> July 23rd 2025 </div>
-        <div class="time"> 1:48:15 AM</div>
+        <div class="city">
+            <div>
+                <h2>Nairobi 🦁</h2>
+                <div class="date">August 15th 2022</div>
+            </div>
+            <div class="time">1:48:15 <small> AM </small></div>
         </div>
 
-    <div class="city">
-        <h2>Cape Town 🌊</h2>
-        <div class="date"> July 23rd 2025 </div>
-        <div class="time"> 9:48:15 AM</div>
+        <div class="city">
+            <div>
+                <h2>Berlin 🕍</h2>
+                <div class="date">August 15th 2022</div>
+            </div>
+            <div class="time">1:48:15 <small> AM </small></div>
+        </div>
     </div>
 
 
-
-
-
-
-    </div>
 
 
 
@@ -80,7 +57,7 @@
                 GitHub </a> and hosted on <a class="link-website" href=" https://worldclocksymphony.netlify.app/"
                 target="_blank" rel="noopener noreferrer"> Netlify </a>.
         </p>
-    </div>
+        </div>
     </footer>
 
     </footer>
