Updated single location time and date

--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
             <option value="Africa/Johannesburg">Johannesburg 🌍</option>
         </select>
 
-        <div class="city">
+        <div class="city" id="nairobi">
             <div>
                 <h2>Nairobi 🦁</h2>
-                <div class="date">August 15th 2022</div>
+                <div class="date"></div>
             </div>
-            <div class="time">1:48:15 <small> AM </small></div>
+            <div class="time"></div>
         </div>
 
-        <div class="city">
+        <div class="city" id="berlin">
             <div>
                 <h2>Berlin 🕍</h2>
-                <div class="date">August 15th 2022</div>
+                <div class="date"></div>
             </div>
-            <div class="time">1:48:15 <small> AM </small></div>
+            <div class="time"></div>
         </div>
     </div>
 
