--- a/index.html
+++ b/index.html
@@ -20,34 +20,18 @@
     <div class="container">
         <h1>World Clock Symphony</h1>
 
-        <select>
+        <select id="city">
             <option value="">Choose a City ....</option>
             <option value="America/New_York">New York 🗽</option>
-            <option value="Europe/London">London 💂‍♂️ </option>
+            <option value="Europe/London">London 💂‍♂️</option>
             <option value="Asia/Tokyo">Tokyo 🍣</option>
             <option value="Australia/Sydney">Sydney 🌏</option>
             <option value="Africa/Johannesburg">Johannesburg 🌍</option>
         </select>
 
-        <div class="city" id="nairobi">
-            <div>
-                <h2>Nairobi 🦁</h2>
-                <div class="date"></div>
-            </div>
-            <div class="time"></div>
-        </div>
+        <div id="cities">
 
-        <div class="city" id="berlin">
-            <div>
-                <h2>Berlin 🕍</h2>
-                <div class="date"></div>
-            </div>
-            <div class="time"></div>
-        </div>
     </div>
-
-
-
 
 
     <footer>
