Worked on the JS

--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
         </div>
         </div>
 
+
+    <div id="selected-city">
+        <div class="city">
+        </div>
     </div>
-    <div id="selected-city"></div>
 
 
     <footer>
