--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@
                 rel="noopener noreferrer"> Netlify </a>.
         </p>
     </footer>
+    <button id="theme-toggle">Toggle Theme</button>
 
     <script src="index.js"></script>
+
 </body>
 
 </html>
