--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 
 <body>
 
-  <video autoplay muted loop id="bg-video">
-<source src="media/Africa.mp4" type="video/mp4" />
-    Your browser does not support HTML5 video.
-  </video>
+<video autoplay muted loop id="bg-video">
+    <source id="video-source" src="media/Africa.mp4" type="video/mp4" />
+</video>
 
 
 <div class="video-overlay"></div>
