Changed the CSS

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         <footer>
             <p>
-                Built with ❤️ by Olga — Open-sourced on
+                Built with ❤️ by Olga Sheilla — Open-sourced on
                 <a href="https://github.com/SheillaO/World-Clock-Symphony" target="_blank">GitHub</a>
                 & hosted on
                 <a href="https://worldclocksymphony.netlify.app/" target="_blank">Netlify</a>
