Worked on the CSS structure

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         href="https://fonts.googleapis.com/css2?family=PT+Mono&family=Poppins&family=Roboto:wght@300;400;700&display=swap"
         rel="stylesheet" />
 </head>
-
+<audio id="tick-sound" preload="auto">
+    <img src="https://www.soundjay.com/misc/sounds/clock-ticking-1.wav" type="audio/wav">
+</audio>
 <body>
     <div class="main-container">
         <header>
