Added animation and spotify api

--- a/index.html
+++ b/index.html
@@ -19,14 +19,23 @@
 </head>
 
 <body>
-    <audio id="tick-sound" preload="auto">
-        <img src="https://www.soundjay.com/misc/sounds/clock-ticking-1.wav" type="audio/wav">
-    </audio>
-<div class="flying-bird">
-    <lottie-player src="https://lottie.host/977cc134-99fe-43a8-bd97-1f0bf5570746/qhKYQJIPIp.json"
-        background="transparent" speed="1" style="width: 40%; height: 40%;" loop autoplay>
-    </lottie-player>
-</div>
+    <!-- Floating clouds above everything -->
+    <div class="clouds-wrapper">
+        <div class="floating-cloud cloud1">
+            <lottie-player src="https://lottie.host/45e8f2ae-4f25-42cd-8798-041b0f8c40a8/xEdvREqplK.json"
+                background="transparent" speed="1" style="width: 120px; height: 120px;" loop autoplay></lottie-player>
+        </div>
+        <div class="floating-cloud cloud2">
+            <lottie-player src="https://lottie.host/45e8f2ae-4f25-42cd-8798-041b0f8c40a8/xEdvREqplK.json"
+                background="transparent" speed="1" style="width: 160px; height: 160px;" loop autoplay></lottie-player>
+        </div>
+    </div>
+
+    <!-- Floating bird (optional) -->
+    <div class="flying-bird">
+        <lottie-player src="https://lottie.host/977cc134-99fe-43a8-bd97-1f0bf5570746/qhKYQJIPIp.json"
+            background="transparent" speed="1" style="width: 40%; height: 40%;" loop autoplay></lottie-player>
+    </div>
 
     <div class="main-container">
 <header>
