Finalized the footer structure and css

--- a/index.html
+++ b/index.html
@@ -107,16 +107,17 @@
         </section>
 
     </div>
+<footer>
+    <p>
+        Built with ❤️ by Olga – Technical Product Marketing Manager ·
+        <a href="https://github.com/SheillaO/World-Clock-Symphony" target="_blank"
+            rel="noopener noreferrer">Open-sourced on GitHub</a> ·
+        Hosted on <a href="https://worldclocksymphony.netlify.app/" target="_blank"
+            rel="noopener noreferrer">Netlify</a> ·
+        Tech Stack: HTML · CSS · JS · Lottie
+    </p>
+</footer>
 
-
-    <footer>
-        <p>
-            Built with ❤️ by Olga Sheilla — Open-sourced on
-            <a href="https://github.com/SheillaO/World-Clock-Symphony" target="_blank">GitHub</a>
-            & hosted on
-            <a href="https://worldclocksymphony.netlify.app/" target="_blank">Netlify</a>
-        </p>
-    </footer>
 
 
     <script src="index.js"></script>
